--- a/api-reference/endpoint/addresstokenbalance.mdx
+++ b/api-reference/endpoint/addresstokenbalance.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Address ERC20 Token Holding"
 api: "GET /v2/api"
 keywords: ["address token balance", "erc20 holdings"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
