--- a/api-reference/endpoint/addresstokennftbalance.mdx
+++ b/api-reference/endpoint/addresstokennftbalance.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Address ERC721 Token Holding"
 api: "GET /v2/api"
 keywords: ["address nft balance", "erc721 holdings"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
