--- a/api-reference/endpoint/addresstokennftinventory.mdx
+++ b/api-reference/endpoint/addresstokennftinventory.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Address ERC721 Token Inventory by Contract"
 api: "GET /v2/api"
 keywords: ["address nft inventory", "erc721 inventory"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
