--- a/api-reference/endpoint/balancehistory.mdx
+++ b/api-reference/endpoint/balancehistory.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: 'Get Historical Native Balance for an Address'
 api: 'GET /v2/api'
 keywords: ['historical balance', 'balance history']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
