--- a/api-reference/endpoint/chainsize.mdx
+++ b/api-reference/endpoint/chainsize.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Ethereum Nodes Size"
 api: "GET /v2/api"
 keywords: ["chain size", "node size"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
