--- a/api-reference/endpoint/checkproxyverification.mdx
+++ b/api-reference/endpoint/checkproxyverification.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Check Proxy Contract Verification Status'
 description: 'Check the status of a proxy contract verification.'
 api: 'GET /v2/api'
 keywords: ['proxy verification', 'checkproxyverification']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
