--- a/api-reference/endpoint/checkverifystatus.mdx
+++ b/api-reference/endpoint/checkverifystatus.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Check Source Code Verification Status'
 description: 'Check the status of a source code verification request.'
 api: 'GET /v2/api'
 keywords: ['verification status', 'checkverifystatus']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
