--- a/api-reference/endpoint/dailyavggaslimit.mdx
+++ b/api-reference/endpoint/dailyavggaslimit.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Daily Average Gas Limit'
 description: 'Retrieve historical daily average gas limit.'
 api: 'GET /v2/api'
 keywords: ['daily average gas limit', 'gas limit stats']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
