--- a/api-reference/endpoint/dailyavggasprice.mdx
+++ b/api-reference/endpoint/dailyavggasprice.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Daily Average Gas Price'
 description: 'Retrieve daily average gas price statistics.'
 api: 'GET /v2/api'
 keywords: ['daily average gas price', 'gas price stats']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
