--- a/api-reference/endpoint/dailyavghashrate.mdx
+++ b/api-reference/endpoint/dailyavghashrate.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily Average Network Hash Rate"
 api: "GET /v2/api"
 keywords: ["average hash rate", "daily hash rate"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
