--- a/api-reference/endpoint/dailyavgnetdifficulty.mdx
+++ b/api-reference/endpoint/dailyavgnetdifficulty.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily Average Network Difficulty"
 api: "GET /v2/api"
 keywords: ["network difficulty", "daily difficulty"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
