--- a/api-reference/endpoint/dailyblkcount.mdx
+++ b/api-reference/endpoint/dailyblkcount.mdx
@@ -2,8 +2,8 @@
 title: 'Get Daily Block Count and Rewards'
 api: 'GET /v2/api'
 keywords: ['daily block count', 'block rewards']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
