--- a/api-reference/endpoint/dailyblockrewards.mdx
+++ b/api-reference/endpoint/dailyblockrewards.mdx
@@ -2,8 +2,8 @@
 title: 'Get Daily Block Rewards'
 api: 'GET /v2/api'
 keywords: ['daily block rewards', 'miner rewards']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
