--- a/api-reference/endpoint/dailygasused.mdx
+++ b/api-reference/endpoint/dailygasused.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Ethereum Daily Total Gas Used'
 description: 'Retrieve the total gas used each day.'
 api: 'GET /v2/api'
 keywords: ['daily gas used', 'gas usage stats']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
