--- a/api-reference/endpoint/dailynetutilization.mdx
+++ b/api-reference/endpoint/dailynetutilization.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily Network Utilization"
 api: "GET /v2/api"
 keywords: ["network utilization", "daily utilization"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
