--- a/api-reference/endpoint/dailynewaddress.mdx
+++ b/api-reference/endpoint/dailynewaddress.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily New Address Count"
 api: "GET /v2/api"
 keywords: ["new address count", "daily new address"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
