--- a/api-reference/endpoint/dailytx.mdx
+++ b/api-reference/endpoint/dailytx.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily Transaction Count"
 api: "GET /v2/api"
 keywords: ["daily transaction count", "dailytx"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
