--- a/api-reference/endpoint/dailytxnfee.mdx
+++ b/api-reference/endpoint/dailytxnfee.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Daily Network Transaction Fee"
 api: "GET /v2/api"
 keywords: ["daily transaction fee", "miner fees"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
