--- a/api-reference/endpoint/ethblocknumber.mdx
+++ b/api-reference/endpoint/ethblocknumber.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_blockNumber'
 description: 'Fetch the latest block number.'
 api: 'GET /v2/api'
 keywords: ['eth_blockNumber', 'latest block']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
