--- a/api-reference/endpoint/ethcall.mdx
+++ b/api-reference/endpoint/ethcall.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_call'
 description: 'Execute a call without creating a transaction.'
 api: 'GET /v2/api'
 keywords: ['eth_call', 'execute call']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
