--- a/api-reference/endpoint/ethdailyprice.mdx
+++ b/api-reference/endpoint/ethdailyprice.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Ether Historical Price"
 api: "GET /v2/api"
 keywords: ["eth historical price", "ethdailyprice"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
