--- a/api-reference/endpoint/ethestimategas.mdx
+++ b/api-reference/endpoint/ethestimategas.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_estimateGas'
 description: 'Estimate the gas required for a transaction.'
 api: 'GET /v2/api'
 keywords: ['eth_estimateGas', 'gas estimation']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
