--- a/api-reference/endpoint/ethgasprice.mdx
+++ b/api-reference/endpoint/ethgasprice.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_gasPrice'
 description: 'Get the current gas price.'
 api: 'GET /v2/api'
 keywords: ['eth_gasPrice', 'current gas price']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
