--- a/api-reference/endpoint/ethgetblockbynumber.mdx
+++ b/api-reference/endpoint/ethgetblockbynumber.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getBlockByNumber'
 description: 'Get block information by number.'
 api: 'GET /v2/api'
 keywords: ['eth_getBlockByNumber', 'block details']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
