--- a/api-reference/endpoint/ethgetblocktransactioncountbynumber.mdx
+++ b/api-reference/endpoint/ethgetblocktransactioncountbynumber.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getBlockTransactionCountByNumber'
 description: 'Get the number of transactions in a block.'
 api: 'GET /v2/api'
 keywords: ['eth_getBlockTransactionCountByNumber', 'transaction count']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
