--- a/api-reference/endpoint/ethgetstorageat.mdx
+++ b/api-reference/endpoint/ethgetstorageat.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getStorageAt'
 description: 'Get the value at a storage position.'
 api: 'GET /v2/api'
 keywords: ['eth_getStorageAt', 'storage value']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
