--- a/api-reference/endpoint/ethgettransactionbyhash.mdx
+++ b/api-reference/endpoint/ethgettransactionbyhash.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getTransactionByHash'
 description: 'Get transaction details by hash.'
 api: 'GET /v2/api'
 keywords: ['eth_getTransactionByHash', 'transaction details']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
