--- a/api-reference/endpoint/ethgettransactioncount.mdx
+++ b/api-reference/endpoint/ethgettransactioncount.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getTransactionCount'
 description: 'Get the number of transactions sent from an address.'
 api: 'GET /v2/api'
 keywords: ['eth_getTransactionCount', 'transaction count']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
