--- a/api-reference/endpoint/ethgettransactionreceipt.mdx
+++ b/api-reference/endpoint/ethgettransactionreceipt.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getTransactionReceipt'
 description: 'Get the receipt of a transaction by hash.'
 api: 'GET /v2/api'
 keywords: ['eth_getTransactionReceipt', 'transaction receipt']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
