--- a/api-reference/endpoint/ethgetunclebyblocknumberandindex.mdx
+++ b/api-reference/endpoint/ethgetunclebyblocknumberandindex.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getUncleByBlockNumberAndIndex'
 description: 'Get uncle block details by block number and index.'
 api: 'GET /v2/api'
 keywords: ['eth_getUncleByBlockNumberAndIndex', 'uncle block']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
