--- a/api-reference/endpoint/ethprice.mdx
+++ b/api-reference/endpoint/ethprice.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Ether Last Price"
 api: "GET /v2/api"
 keywords: ["eth price", "latest price"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
