--- a/api-reference/endpoint/ethsendrawtransaction.mdx
+++ b/api-reference/endpoint/ethsendrawtransaction.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_sendRawTransaction'
 description: 'Broadcast a signed transaction to the network.'
 api: 'GET /v2/api'
 keywords: ['eth_sendRawTransaction', 'broadcast transaction']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
