--- a/api-reference/endpoint/ethsupply.mdx
+++ b/api-reference/endpoint/ethsupply.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Total Supply of Ether"
 api: "GET /v2/api"
 keywords: ["eth supply", "circulating ether"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
