--- a/api-reference/endpoint/gasestimate.mdx
+++ b/api-reference/endpoint/gasestimate.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Estimation of Confirmation Time'
 description: 'Estimate confirmation time based on a provided gas price.'
 api: 'GET /v2/api'
 keywords: ['gas estimate', 'confirmation time']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
