--- a/api-reference/endpoint/gasoracle.mdx
+++ b/api-reference/endpoint/gasoracle.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Gas Oracle'
 description: 'Get current gas price recommendations.'
 api: 'GET /v2/api'
 keywords: ['gas oracle', 'gas prices']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
