--- a/api-reference/endpoint/getabi.mdx
+++ b/api-reference/endpoint/getabi.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Contract ABI'
 description: 'Retrieve the ABI for a verified smart contract.'
 api: 'GET /v2/api'
 keywords: ['contract ABI', 'getabi']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
