--- a/api-reference/endpoint/getblockcountdown.mdx
+++ b/api-reference/endpoint/getblockcountdown.mdx
@@ -2,8 +2,8 @@
 title: 'Get Estimated Block Countdown by Block Number'
 api: 'GET /v2/api'
 keywords: ['block countdown', 'estimated time']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
