--- a/api-reference/endpoint/getblocknobytime.mdx
+++ b/api-reference/endpoint/getblocknobytime.mdx
@@ -2,8 +2,8 @@
 title: 'Get Block Number by Timestamp'
 api: 'GET /v2/api'
 keywords: ['block number', 'timestamp']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
