--- a/api-reference/endpoint/getlogs-topics.mdx
+++ b/api-reference/endpoint/getlogs-topics.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Event Logs by Topics"
 api: "GET /v2/api"
 keywords: ["event logs", "topics"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
