--- a/api-reference/endpoint/getminedblocks.mdx
+++ b/api-reference/endpoint/getminedblocks.mdx
@@ -2,8 +2,8 @@
 title: 'Get Blocks Validated by Address'
 api: 'GET /v2/api'
 keywords: ['mined blocks', 'getminedblocks']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
