--- a/api-reference/endpoint/getstatus.mdx
+++ b/api-reference/endpoint/getstatus.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Check Contract Execution Status"
 api: "GET /v2/api"
 keywords: ["contract execution status", "getstatus"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
