--- a/api-reference/endpoint/gettxreceiptstatus.mdx
+++ b/api-reference/endpoint/gettxreceiptstatus.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Check Transaction Receipt Status"
 api: "GET /v2/api"
 keywords: ["transaction receipt status", "gettxreceiptstatus"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
