--- a/api-reference/endpoint/token1155tx.mdx
+++ b/api-reference/endpoint/token1155tx.mdx
@@ -2,8 +2,8 @@
 title: "Get ERC1155 Token Transfers by Address"
 api: 'GET /v2/api'
 keywords: ['ERC1155 transfers', 'token1155tx']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
