--- a/api-reference/endpoint/tokenbalance.mdx
+++ b/api-reference/endpoint/tokenbalance.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get ERC20-Token Account Balance for TokenContractAddress"
 api: "GET /v2/api"
 keywords: ["token balance", "erc20 balance"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
