--- a/api-reference/endpoint/tokenbalancehistory.mdx
+++ b/api-reference/endpoint/tokenbalancehistory.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Historical ERC20-Token Account Balance by BlockNo"
 api: "GET /v2/api"
 keywords: ["token balance history", "erc20 balance history"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
