--- a/api-reference/endpoint/tokenholdercount.mdx
+++ b/api-reference/endpoint/tokenholdercount.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Token Holder Count by Contract Address"
 api: "GET /v2/api"
 keywords: ["token holder count", "erc20 holder count"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
