--- a/api-reference/endpoint/tokenholderlist.mdx
+++ b/api-reference/endpoint/tokenholderlist.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Token Holder List by Contract Address"
 api: "GET /v2/api"
 keywords: ["token holder list", "erc20 holders"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
