--- a/api-reference/endpoint/tokeninfo.mdx
+++ b/api-reference/endpoint/tokeninfo.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Token Info by ContractAddress"
 api: "GET /v2/api"
 keywords: ["token info", "token metadata"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
