--- a/api-reference/endpoint/tokennfttx.mdx
+++ b/api-reference/endpoint/tokennfttx.mdx
@@ -2,8 +2,8 @@
 title: "Get ERC721 Token Transfers by Address"
 api: 'GET /v2/api'
 keywords: ['ERC721 transfers', 'tokennfttx']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
