--- a/api-reference/endpoint/tokensupply.mdx
+++ b/api-reference/endpoint/tokensupply.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get ERC20-Token TotalSupply by ContractAddress"
 api: "GET /v2/api"
 keywords: ["token supply", "erc20 supply"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
