--- a/api-reference/endpoint/tokensupplyhistory.mdx
+++ b/api-reference/endpoint/tokensupplyhistory.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Historical ERC20-Token TotalSupply by ContractAddress & BlockNo"
 api: "GET /v2/api"
 keywords: ["token supply history", "erc20 supply history"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
