--- a/api-reference/endpoint/txlist.mdx
+++ b/api-reference/endpoint/txlist.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Normal Transactions By Address"
 api: 'GET /v2/api'
 keywords: ['transactions', 'txlist']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
