--- a/api-reference/endpoint/txsbeaconwithdrawal.mdx
+++ b/api-reference/endpoint/txsbeaconwithdrawal.mdx
@@ -2,8 +2,8 @@
 title: 'Get Beacon Chain Withdrawals by Address'
 api: 'GET /v2/api'
 keywords: ['beacon withdrawals', 'txsBeaconWithdrawal']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
