--- a/api-reference/endpoint/verifyproxycontract.mdx
+++ b/api-reference/endpoint/verifyproxycontract.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Verify Proxy Contract'
 description: 'Submit a proxy contract for verification.'
 api: 'POST /api'
 keywords: ['verify proxy', 'proxy contract']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
