--- a/api-reference/endpoint/verifysourcecode.mdx
+++ b/api-reference/endpoint/verifysourcecode.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Verify Solidity Source Code'
 description: 'Submit Solidity source code for verification.'
 api: 'POST /api'
 keywords: ['verify contract', 'solidity verification']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
