--- a/api-reference/endpoint/verifyvyper.mdx
+++ b/api-reference/endpoint/verifyvyper.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Verify Vyper Source Code'
 description: 'Submit a Vyper contract for verification.'
 api: 'POST /api'
 keywords: ['verify contract', 'vyper verification']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
