--- a/api-reference/endpoint/dailyavgblocksize.mdx
+++ b/api-reference/endpoint/dailyavgblocksize.mdx
@@ -2,8 +2,8 @@
 title: 'Get Daily Average Block Size'
 api: 'GET /v2/api'
 keywords: ['average block size', 'daily stats']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
