--- a/api-reference/endpoint/dailyuncleblkcount.mdx
+++ b/api-reference/endpoint/dailyuncleblkcount.mdx
@@ -2,8 +2,8 @@
 title: 'Get Daily Uncle Block Count and Rewards'
 api: 'GET /v2/api'
 keywords: ['daily uncle block count', 'uncle rewards']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
