--- a/api-reference/endpoint/ethgetcode.mdx
+++ b/api-reference/endpoint/ethgetcode.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getCode'
 description: 'Get the code stored at an address.'
 api: 'GET /v2/api'
 keywords: ['eth_getCode', 'contract code']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
