--- a/api-reference/endpoint/ethgettransactionbyblocknumberandindex.mdx
+++ b/api-reference/endpoint/ethgettransactionbyblocknumberandindex.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'eth_getTransactionByBlockNumberAndIndex'
 description: 'Get transaction details by block number and index.'
 api: 'GET /v2/api'
 keywords: ['eth_getTransactionByBlockNumberAndIndex', 'transaction in block']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
