--- a/api-reference/endpoint/getblockreward.mdx
+++ b/api-reference/endpoint/getblockreward.mdx
@@ -2,8 +2,8 @@
 title: 'Get Block and Uncle Rewards by Block Number'
 api: 'GET /v2/api'
 keywords: ['block reward', 'uncle block reward']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
