--- a/api-reference/endpoint/getcontractcreation.mdx
+++ b/api-reference/endpoint/getcontractcreation.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Contract Creator and Creation Tx Hash'
 description: "Retrieve a contract's deployer address and creation transaction."
 api: 'GET /v2/api'
 keywords: ['contract creator', 'creation transaction']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
