--- a/api-reference/endpoint/getsourcecode.mdx
+++ b/api-reference/endpoint/getsourcecode.mdx
@@ -1,10 +1,10 @@
-﻿---
+---
 title: 'Get Contract Source Code'
 description: 'Retrieve the source code for a verified smart contract.'
 api: 'GET /v2/api'
 keywords: ['contract source code', 'getsourcecode']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
