--- a/api-reference/endpoint/nodecount.mdx
+++ b/api-reference/endpoint/nodecount.mdx
@@ -1,9 +1,9 @@
-﻿---
+---
 title: "Get Total Nodes Count"
 api: "GET /v2/api"
 keywords: ["node count", "total nodes"]
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
