--- a/api-reference/endpoint/tokentx.mdx
+++ b/api-reference/endpoint/tokentx.mdx
@@ -2,8 +2,8 @@
 title: "Get ERC20 Token Transfers by Address"
 api: 'GET /v2/api'
 keywords: ['ERC20 transfers', 'tokentx']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
