--- a/api-reference/endpoint/txlistinternal.mdx
+++ b/api-reference/endpoint/txlistinternal.mdx
@@ -2,8 +2,8 @@
 title: "Get Internal Transactions by Address"
 api: 'GET /v2/api'
 keywords: ['internal transactions', 'txlistinternal address']
+mode: "wide"
 ---
-
 import { chain } from '/snippets/custom-variables.mdx';
 
 
