--- a/resources/rate-limits.mdx
+++ b/resources/rate-limits.mdx
@@ -1,12 +1,9 @@
 ---
 title: "Rate Limits"
-description: "Review Etherscan API rate limits by tier and important exceptions."
 ---
 
-## Rate Limits
-
 <Warning>
-[**Historical endpoints**](../api-reference/endpoint/balancehistory) and [**name tags**](./common-error-messages.mdx#endpoint-specific-errors) have a rate limit of **2 calls/s** regardless of API PRO tier.
+Historical endpoints (for example, <a href="../api-reference/endpoint/balancehistory">balance history</a>) and name tags have a rate limit of 2 calls/second regardless of API PRO tier.
 </Warning>
 
 | API Tier | Rate Limit |
@@ -16,4 +13,4 @@ description: "Review Etherscan API rate limits by tier and important exceptions.
 | Advanced | 20 calls/second, up to 500,000 calls/day |
 | Professional | 30 calls/second, up to 1,000,000 calls/day |
 | Pro Plus | 30 calls/second, up to 1,500,000 calls/day |
-| Dedicated/Custom | [**Contact Us**](mailto:apisupport@etherscan.io) |
+| Dedicated/Custom | <a href="mailto:apisupport@etherscan.io">Contact Us</a> |
